--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,57 @@
     padding: 0;
     box-sizing: border-box;
 }
+#container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#carousel{
+    max-width: 700px;
+    width: 50%;
+    height: 33vh;
+    position: relative;
+}
+
+.image{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.image img{
+    height: 100%;
+    width: 100%;
+    object-fit:cover;
+    display: none;
+}
+
+#carousel .show img{
+    display: block;
+}
+
+#prev, #next{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+    z-index: 999;
+}
+
+#prev{
+    left: 10px;
+    top: 50%;
+    transform: translatey(-50%);
+}
+
+#next{
+    right: 10px;
+    top: 50%;
+    transform: translatey(-50%);
+}
